# RJJ

./: .newWorld.wbproj  README.md  newWorld.wbt
NAO_RJJ/: CMakeLists.txt  Robot.cpp  Robot.h  main.cpp  move.cpp  qiproject.xml  robotsmanager.cpp  robotsmanager.h
NAO_RJJ/build-nao_toolchain/: CMakeCache.txt  Makefile  NAO_RJJ.cbp  cmake_install.cmake  dependencies.cmake
NAO_RJJ/build-nao_toolchain/sdk/: QtNetwork.framework  QtXml.framework
NAO_RJJ/build-nao_toolchain/sdk/lib/: libalbehavior.dylib  libalbehaviorinfo.dylib  libalcommon.dylib  libalerror.dylib  libalfile.dylib  liballauncher.dylib  liballogremote.dylib  libalmath.dylib  libalmodelutils.dylib  libalmotionrecorder.dylib  libalparammanager.dylib  libalproxies.dylib  libalpythontools.dylib  libalresource.dylib  libalserial.dylib  libalthread.dylib  libaltools.dylib  libalvalue.dylib  libalvision.dylib  libarchive.8.dylib  libhal_common.dylib  libio-rs232.dylib  libio-usb.dylib  libkpextract.dylib  liblaser_utils.dylib  libnao-modules.dylib  libnao_devices.dylib  libnao_running.dylib  libnaosimulation_interface.dylib  libnavcommon.dylib  libopencv_calib3d.dylib  libopencv_contrib.dylib  libopencv_core.2.3.dylib  libopencv_features2d.2.3.dylib  libopencv_features2d.dylib  libopencv_highgui.2.3.1.dylib  libopencv_highgui.2.3.dylib  libopencv_highgui.dylib  libopencv_imgproc.2.3.1.dylib  libopencv_ml.2.3.1.dylib  (+40 more)
move/: .cproject  .project  CMakeLists.txt  move.h  qiproject.xml
move/build-nao_toolchain/: CMakeCache.txt  Makefile  cmake_install.cmake  move.cbp
move/build-nao_toolchain/sdk/: QtGui.framework  (+4 more)
(+81 files in other folders)
